corrects hierarchy issues with project-titles on mobile and desktop

--- a/src/components/Projects/styles/Pass.scss
+++ b/src/components/Projects/styles/Pass.scss
@@ -11,6 +11,11 @@
   // border-radius: 50px;
   background: #ffaf04;
   box-shadow: inset 8px 8px 11px #e69e04, inset -8px -8px 11px #ffc104;
+  .heading {
+    h1 {
+      font-size: 2rem;
+    }
+  }
   .app-icon {
     // height: 75px;
     // width: 75px;
@@ -78,6 +83,9 @@
     left: 5vw;
     width: 90vw !important;
     // height: 80vh;
+    .project-title h1 {
+      font-size: 3vh !important;
+    }
     .card-body {
       // .project-icons svg {
       //   width: 15vh;
